# Android-Tools

./: genyfwd.sh  jd-gui.cfg
ApkStudio/: apkstudio  apkstudio.sh  libQt5DBus.so.5  libQt5PrintSupport.so.5  libicui18n.so.51  libicuuc.so.51
ApkStudio/binaries/zipalign/: zipalign
Rooting/ClockWork Recovery/PG76IMG/: android-info.txt  recovery.img
Rooting/Original Recovery/: srecovery233.img  srecovery235.img
Xposed_Installer/xposed-v84-sdk22-x86/system/: xposed.prop
apkstudio/: apkstudio  moc_predefs.h
jd-gui/: LICENSE  NOTICE  README.md
netcat/: netcat
netcat/netcat-0.7.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
netcat/netcat-0.7.1/doc/: Makefile.am  Makefile.in  migration  netcat.1  netcat.info  netcat.pod  netcat.texi  texi2pod.pl.in  version.texi
netcat/netcat-0.7.1/doc/drafts/: Makefile.am  Makefile.in  README  rfc2292.txt
netcat/netcat-0.7.1/lib/: Makefile.am  Makefile.in
netcat/netcat-0.7.1/lib/contrib/: Makefile.am  Makefile.in
netcat/netcat-0.7.1/m4/: Makefile.am  Makefile.in  lbl-net.m4
netcat/netcat-0.7.1/po/: POTFILES.in  it.gmo  it.po  netcat.pot  sk.gmo  sk.po
netcat/netcat-0.7.1/src/: Makefile.am  Makefile.in  core.c  flagset.c  intl.h  misc.c  misc.h  netcat.c  netcat.h  network.c  proto.h  telnet.c  udphelper.c
signapk/tmp/: signapk.tar
