## Process this file with automake to create Makefile.in

## Makefile for Netcat.

## Copyright (C) 1995, 1996, 1997, 1998, 1999, 2001, 2002 Free
## Software Foundation, Inc.

## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.

## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.

# $Id: Makefile.am,v 1.4 2003/01/03 22:53:32 themnemonic Exp $

EXTRA_DIST = codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4 \
	inttypes_h.m4 inttypes.m4 inttypes-pri.m4 isc-posix.m4 lbl-net.m4 \
	lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4 \
	stdint_h.m4 uintmax_t.m4 ulonglong.m4
